--- a/src/index.css
+++ b/src/index.css
@@ -497,20 +497,27 @@ figure p{
     }
 
     figure{
-        width:500px;
-        height:500px;
+        width:1100px;
+        height:1100px;
         margin-bottom:50px;
-        margin-left:20%;
+        margin-left:0px;
        
     }
 
     .img_carte_logement {
-        width: 500px;
-        height: 500px;
+        width: 1100px;
+        height: 1100px;
     }
 
     .txt_logement {
-        font-size: 40px;
+        top: -340px;
+        font-size: 80px;
+    }
+
+    .fond_carte {
+        top: -110px;
+        width: 1100px;
+        height: 100px;
     }
 
     #selection_location {
@@ -532,24 +539,33 @@ figure p{
         font-size:40px;
     }
 
+    #partie_a_propos {
+        margin-left: 10px;
+    }
+
+
     #Fiabilite{
         margin-top:20%;
         margin-bottom:20%;
+        width:125%;
     }
 
     #Respect {
         margin-top: 20%;
         margin-bottom: 20%;
+        width: 125%;
     }
 
     #Service {
         margin-top: 20%;
         margin-bottom: 20%;
+        width: 125%;
     }
 
     #Securite {
         margin-top: 20%;
         margin-bottom: 40%;
+        width: 125%;
     }
 
     #equipements{
